--- a/foroparaalura/pom.xml
+++ b/foroparaalura/pom.xml
@@ -106,6 +106,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.15</version>
+        </dependency>
+
+
 
 
 
